--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_modular: ^6.3.3
   flutter_mobx: ^2.2.1+1
-  build_runner: ^2.4.9
   shared_preferences: ^2.2.3
   flutter_screenutil: ^5.9.3
+  mobx: ^2.3.3+2
+  
 
 dev_dependencies:
   flutter_test:
@@ -51,7 +52,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-
+  build_runner: ^2.4.9
+  mobx_codegen: ^2.1.1
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
