--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   shared_preferences: ^2.2.3
   flutter_screenutil: ^5.9.3
   mobx: ^2.3.3+2
+  uuid: ^3.0.7
   
 
 dev_dependencies:
